[project]
name = "odh-notebooks-meta-llmcompressor-deps"
version = "0.1.0"
requires-python = "==3.12.*"

# Source of Truth: https://gitlab.com/redhat/rhel-ai/rhaiis/pipeline/-/blob/main/collections/model-opt/cuda13.0-ubi9/constraints.txt?ref_type=heads
# Single source of truth for all things LLMCompressor
dependencies = [
    # these may also be constraint-dependencies
    "loguru",
    "PyYAML",
    "numpy",
    "requests",
    "tqdm",
    "transformers",
    "datasets",
    "accelerate",
    "nvidia-ml-py",
    # AIPCC-8753: auto-round 0.9.2 sdist contains compiled
    # https://redhat-internal.slack.com/archives/C079FE5H94J/p1770229449708539
    # "auto-round==0.9.2",
    "compressed-tensors",
    # pinned: resolver backtracks to 0.10.0.2 without floor due to setuptools<81 constraint interaction
    "llmcompressor>=0.11.0",
]

[tool.uv]
package = false

environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython' and python_full_version == '3.12.*'",
]
