[project]
name = "odh-notebooks-meta-runtime-datascience-deps"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    # Core Data Science Libraries

    # NOTE: ~=1.26.4 for rocm-tensorflow, ~=2.1.3 for cuda tensorflow, and ~=2.3.5 everywhere else
    "numpy>=1.26.4",

    "pandas~=2.3.3",
    "scikit-learn~=1.8.0",
    "scipy~=1.16.2",
    "matplotlib~=3.10.7",
    "plotly~=6.5.2",

    # ML/MLOps Tools

    "skl2onnx~=1.19.1",
    "onnxconverter-common~=1.16.0",

    # Cloud/Infrastructure

    "boto3~=1.42.29",
    "kafka-python-ng~=2.2.3",
]

[tool.uv]
package = false

environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython'",
]
