[project]
name = "odh-notebooks-meta-runtime-datascience-deps"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    # Core Data Science Libraries

    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "matplotlib",
    "plotly",

    # ML/MLOps Tools

    "skl2onnx",
    "onnxconverter-common",

    # Cloud/Infrastructure

    "boto3",
    "kafka-python-ng",
]

[tool.uv]
package = false

environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython'",
]
