[project]
name = "odh-notebooks-meta-runtime-datascience-deps"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    # Core Data Science Libraries

    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "matplotlib",
    "plotly",

    # ML/MLOps Tools
    "mlflow",

    "skl2onnx",
    "onnxconverter-common",

    # Cloud/Infrastructure
    "boto3",
    "kafka-python-ng",

    # Runtime extensions
    "codeflare-sdk; platform_machine != 'ppc64le' and platform_machine != 's390x'",
    "feast",
]

[tool.uv]
package = false

environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython' and python_full_version == '3.12.*'",
]
