[project]
name = "odh-notebooks-meta-runtime-elyra-deps"
version = "0.1.0"
requires-python = "==3.12.*"

# This is a comprehensive list of python dependencies that Elyra requires to execute Jupyter notebooks.
dependencies = [
    "ipykernel",
    "ipython",
    "ipython-genutils",
    "jinja2",
    "jupyter-client",
    "jupyter-core",
    "markupsafe",
    "minio",
    "nbclient",
    "nbconvert",
    "nbformat",
    "papermill",
    "pyzmq",
    "prompt-toolkit",
    "requests",
    "tornado",
    "traitlets",
    "urllib3",
]

[tool.uv]
package = false

environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython'",
]
