[project]
name = "odh-notebooks-meta-tensorflow-rocm-extrernal-deps"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    # ROCm TensorFlow extra PyPI packages (pinned)
    "astunparse==1.6.3",
    "flatbuffers==25.12.19",
    "google-pasta==0.2.0",
    "keras==3.14.0",
    "libclang==18.1.1",
    "ml-dtypes==0.5.4",
    "namex==0.1.0",
    "opt-einsum==3.4.0",
    "optree==0.19.0",
    "typing-extensions==4.15.0",
]

[[tool.uv.index]]
name = "pypi-explicit"
url = "https://pypi.org/simple"
explicit = true

[tool.uv.sources]
astunparse = { index = "pypi-explicit" }
flatbuffers = { index = "pypi-explicit" }
google-pasta = { index = "pypi-explicit" }
keras = { index = "pypi-explicit" }
libclang = { index = "pypi-explicit" }
ml-dtypes = { index = "pypi-explicit" }
namex = { index = "pypi-explicit" }
opt-einsum = { index = "pypi-explicit" }
optree = { index = "pypi-explicit" }
typing-extensions = { index = "pypi-explicit" }

[tool.uv]
package = false

environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython'",
]
