[project]
name = "odh-notebooks-meta-workbench-datascience-deps"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    # Core Data Science Libraries
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "matplotlib",
    "plotly",

    # ML/MLOps Tools
    "kfp",
    "kubeflow-training",
    "mlflow",

    # NOTE: skl2onnx is added directly in consuming pyproject.toml files
    # because codeserver needs s390x exclusion marker while jupyter notebooks don't
    "onnxconverter-common",

    # Cloud/Infrastructure
    "boto3",
    "kafka-python-ng",

    # Workbench extensions
    "codeflare-sdk; platform_machine != 'ppc64le' and platform_machine != 's390x'",
    "feast",
]

[tool.uv]
package = false

environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython'",
]
