[project]
name = "rstudio-notebook"
version = "0.1.0"
requires-python = "==3.11.*"

dependencies = [
    # Base packages
    "wheel~=0.46.2",
    "setuptools~=80.9.0",
]

[tool.uv]
environments = [
    "python_version == '3.11' and sys_platform == 'linux' and platform_machine == 'x86_64'",
    "python_version == '3.11' and sys_platform == 'linux' and platform_machine == 'aarch64'",
]
