[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8.1,<3.9.0"
hpu_media_loader = "==1.9.0.580.1"
habana-tensorflow = "==1.9.0.580.1"
tensorflow = "==2.11.0"
tensorflow-io = "==0.27.0"
tensorboard = "~=2.11.2"
tf2onnx = "~= 1.13.0"
cffi = "==1.14.6"
typing-extensions = ">=4.0.0"
numpy = "==1.23.5"
ninja = "==1.10.2"
pyyaml = "==5.4.1"
mkl = "==2022.0.2"
mkl-include = "==2022.0.2"
pybind11 = "==2.6.2"
elyra-pipeline-editor-extension = "~=3.15.0"
elyra-python-editor-extension = "~=3.15.0"
elyra-code-snippet-extension = "~=3.15.0"
kfp-tekton = "<1.6.0"
boto3 = "~=1.26.69"
jupyter-bokeh = "~=3.0.5"
kafka-python = "~=2.0.2"
matplotlib = "~=3.6.3"
pandas = "~=1.5.3"
plotly = "~=5.13.0"
scikit-learn = "~=1.2.1"
scipy = "~=1.10.0"
jupyterlab-lsp = "~=3.10.2"
jupyterlab-widgets = "~=3.0.5"
jupyter-resource-usage = "~=0.6.0"
jupyterlab = "~=3.5.3"
jupyter-server = "~=2.1.0"
jupyter-server-proxy = "~=3.2.2"
jupyter-server-terminals = "~=0.4.4"
jupyterlab-git = "~=0.41.0"
nbdime = "~=3.1.1"
nbgitpuller = "~=1.1.1"
wheel = "~=0.38.4"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

