[tool.poetry]
name = "ubi9-python-3-11"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ubi9_python_3"}]

[tool.poetry.dependencies]
python = ">=3.11.5, <3.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
