[project]
name = "datascience-notebook"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    # Datascience and useful extensions
    "codeflare-sdk; platform_machine != 'ppc64le' and platform_machine != 's390x'",
    "feast",
    "skl2onnx",
    "odh-notebooks-meta-workbench-datascience-deps",

    # DB connectors
    "pymongo",
    "psycopg",
    "pyodbc",
    "mysql-connector-python",

    # JupyterLab packages
    "odh-elyra",
    "odh-jupyter-trash-cleanup",

    "jupyterlab",
    "jupyter-bokeh",
    "jupyter-server",
    "jupyter-server-proxy",
    "jupyter-server-terminals",
    "jupyterlab-git",
    "jupyterlab-lsp",
    "jupyterlab-widgets",
    "jupyter-resource-usage",
    "nbdime",
    "nbgitpuller",

    # Base packages
    "wheel",
    "setuptools",
]

[tool.uv]
environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython'",
]

override-dependencies = [
    # RHAIENG-2458: CVE-2025-66418 urllib3 - override needed because odh-elyra pulls in
    # appengine-python-standard which has an obnoxious urllib3<2 constraint
    "urllib3>=2.6.0",
]

[tool.uv.sources]
odh-notebooks-meta-workbench-datascience-deps = { path = "../../../dependencies/odh-notebooks-meta-workbench-datascience-deps" }
