[project]
name = "datascience-notebook"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    # Hermetic cpu-base: prefetched with the rest of the stack (see repo-root prefetch-input/ and jupyter/minimal pyproject)
    "uv==0.11.0",
    "micropipenv[toml]==1.10.0",

    # Datascience and useful extensions
    "codeflare-sdk; platform_machine != 'ppc64le' and platform_machine != 's390x'",
    "feast",
    "skl2onnx",
    "odh-notebooks-meta-workbench-datascience-deps",
    "odh-notebooks-meta-db-connectors-deps",
    "odh-notebooks-meta-jupyterlab-deps",
    "odh-notebooks-meta-jupyterlab-datascience-deps",

    # Base packages
    "wheel",
    "setuptools",
]

[tool.uv]
environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython'",
]

override-dependencies = [
    # RHAIENG-2458: CVE-2025-66418 urllib3 - override needed because odh-elyra pulls in
    # appengine-python-standard which has an obnoxious urllib3<2 constraint
    "urllib3>=2.6.0",
]

[tool.uv.sources]
odh-notebooks-meta-workbench-datascience-deps = { path = "../../../dependencies/odh-notebooks-meta-workbench-datascience-deps" }
odh-notebooks-meta-db-connectors-deps = { path = "../../../dependencies/odh-notebooks-meta-db-connectors-deps" }
odh-notebooks-meta-jupyterlab-deps = { path = "../../../dependencies/odh-notebooks-meta-jupyterlab-deps" }
odh-notebooks-meta-jupyterlab-datascience-deps = { path = "../../../dependencies/odh-notebooks-meta-jupyterlab-datascience-deps" }
