[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8.1,<3.9.0"
jupyterlab = "~=3.6.7" 
jupyter-server = "~=2.13.0"
jupyter-server-proxy = "~=4.0.0" 
jupyter-server-terminals = "~=0.5.3"
jupyterlab-git = "~=0.44.0"
nbdime = "~=3.2.1"
nbgitpuller = "~=1.2.0"
wheel = "~=0.43.0"
setuptools = "~=69.2.0"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

