[tool.poetry]
name = "ubi9-python-3-11"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ubi9_python_3"}]

[tool.poetry.dependencies]
python = ">=3.11.5, <3.12.0"

# JupyterLab packages
jupyterlab = "~=4.2.4"
jupyter-bokeh = "~=4.0.5"
jupyter-server = "~=2.14.2"
jupyter-server-proxy = "~=4.3.0"
jupyter-server-terminals = "~=0.5.3"
jupyterlab-git = "~=0.50.1"
jupyterlab-lsp = "~=5.1.0"
jupyterlab-widgets = "~=3.0.13"
jupyter-resource-usage = "~=1.1.0"
nbdime = "~=4.0.1"
nbgitpuller = "~=1.2.1"
# https://github.com/jupyterlab/jupyterlab/issues/509#issuecomment-234659696
pyyaml = "*"

[tool.poetry.group.elyra]
optional = true
dependencies = { odh-elyra = "==4.0.1" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
