[project]
name = "minimal-notebook"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    "uv",
    "micropipenv[toml]",

    "odh-notebooks-meta-jupyterlab-deps",
    # PDF export (nbconvert); RHAIENG-5765 / AIPCC-7795
    "pandoc-rhai",

    # Base packages
    "wheel",
    "setuptools",
]

[tool.uv.sources]
odh-notebooks-meta-jupyterlab-deps = { path = "../../../dependencies/odh-notebooks-meta-jupyterlab-deps" }

[tool.uv]
environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython' and python_full_version == '3.12.*'",
]
