[project]
name = "minimal-notebook"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    # JupyterLab packages
    "odh-jupyter-trash-cleanup==0.1.1",

    "jupyterlab==4.4.7",
    "jupyter-server~=2.17.0",
    "jupyter-server-proxy~=4.4.0",
    "jupyter-server-terminals~=0.5.3",
    "jupyterlab-git~=0.51.2",
    "nbdime~=4.0.2",
    "nbgitpuller~=1.2.2",

    # Base packages
    "wheel~=0.46.2",
    "setuptools~=80.9.0",
]

[tool.uv]
environments = [
    "python_version == '3.12' and sys_platform == 'linux' and platform_machine == 'x86_64'",
    "python_version == '3.12' and sys_platform == 'linux' and platform_machine == 'ppc64le'",
    "python_version == '3.12' and sys_platform == 'linux' and platform_machine == 's390x'",
    "python_version == '3.12' and sys_platform == 'linux' and platform_machine == 'aarch64'",
]
