# https://docs.astral.sh/uv/concepts/projects/config/
[project]
name = "pytorch-llmcompressor-notebook"
version = "0.1.0"
requires-python = "==3.12.*"

# https://docs.astral.sh/uv/concepts/projects/workspaces/#when-not-to-use-workspaces
dependencies = [
    # see https://redhat-internal.slack.com/archives/C079FE5H94J/p1756933987117709?thread_ts=1756933154.294109&cid=C079FE5H94J
    # for a discussion on what version of torch to use

    # PyTorch packages
    "tensorboard~=2.20.0",
    "torch==2.7.1",
    "torchvision~=0.22.1",

    # llmcompressor packages
    # see https://redhat-internal.slack.com/archives/C0961HQ858Q/p1757007056725559?thread_ts=1756924127.136609&cid=C0961HQ858Q

    # llmcompressor packages
    "llmcompressor~=0.7.1",
    "lm-eval~=0.4.9",

    # Datascience and useful extensions
    "boto3~=1.40.27",
    "kafka-python-ng~=2.2.3",
    "kfp~=2.14.3",
    "matplotlib~=3.10.6",
    "numpy~=2.2.6",
    "pandas~=2.3.2",
    "plotly~=6.3.0",
    "scikit-learn~=1.7.2",
    "scipy~=1.16.1",
    "skl2onnx~=1.19.1",
    "onnxconverter-common~=1.16.0",  # ONNX 1.21+ (skl2onnx); was ~=1.13.0
    "onnx>=1.21.0; platform_machine != 's390x'",  # CVE-2026-28500
    "kubeflow-training==1.9.3",
    "feast~=0.54.1",

    # DB connectors
    "pymongo~=4.14.1",
    "psycopg~=3.2.10",
    "pyodbc~=5.2.0",
    "mysql-connector-python~=9.4.0",

    # JupyterLab packages
    "odh-elyra==4.2.4",
    "odh-jupyter-trash-cleanup==0.1.1",

    "jupyterlab==4.4.7",
    "jupyter-bokeh~=4.0.5",
    "jupyter-server~=2.17.0",
    "jupyter-server-proxy~=4.4.0",
    "jupyter-server-terminals~=0.5.3",
    "jupyterlab-git~=0.51.2",
    "jupyterlab-lsp~=5.1.0",
    "jupyterlab-widgets~=3.0.15",
    "jupyter-resource-usage~=1.1.1",
    "nbdime~=4.0.2",
    "nbgitpuller~=1.2.2",

    # Base packages
    "wheel~=0.46.2",
    "setuptools~=80.9.0",
]

## https://docs.astral.sh/uv/concepts/resolution/#dependency-metadata
#[[tool.uv.dependency-metadata]]
## TODO(HACK): vllm is a requirement, however, as compressed-tensors is pinned, this can't be installed together
#name = "vllm"
#version = "0.8.5"
#requires-dist = [
#    "compressed-tensors"
#]

# https://docs.astral.sh/uv/concepts/projects/dependencies/#dependency-sources
[tool.uv.sources]
# https://docs.astral.sh/uv/guides/integration/pytorch/#using-uv-with-pytorch
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

# https://docs.astral.sh/uv/concepts/indexes/#package-indexes
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# https://docs.astral.sh/uv/concepts/resolution/#dependency-overrides
# https://docs.astral.sh/uv/reference/settings/#override-dependencies
[tool.uv]
# https://github.com/astral-sh/uv/issues/2686
# https://github.com/astral-sh/uv/issues/4422

override-dependencies = [
    # vllm is a requirement, however, as compressed-tensors is pinned, this can't be installed together
    "compressed-tensors",
    # RHAIENG-2458: CVE-2025-66418 urllib3 decompression vulnerability
    # Upstream: https://github.com/elyra-ai/elyra/issues/3325
    "urllib3>=2.6.0",
    # RHAIENG-3209: CVE-2026-25990  Pillow: Out-of-bounds Write
    # Upstream: https://github.com/vllm-project/llm-compressor/releases/tag/0.7.1.1
    "pillow>=12.1.1",
    # RHOAIENG-53183: CVE-2026-32274 Black: Arbitrary file writes from unsanitized user input in cache file name
    "black>=26.3.1",
]

# from https://redhat-internal.slack.com/archives/C079FE5H94J/p1756934476976759?thread_ts=1756933154.294109&cid=C079FE5H94J
constraint-dependencies = [
    "loguru==0.7.3",
    "pyyaml==6.0.2",
    "numpy==2.2.6",
    "requests==2.32.5",
    "tqdm==4.67.1",
    # apicc is still on torch 2.7.1
    # "torch==2.8.0",
    "transformers==4.55.2",
    "datasets==4.0.0",
    "accelerate==1.10.0",
    "pynvml==12.0.0",
    "pillow==12.1.1",
]

environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython'",
]
