# https://docs.astral.sh/uv/concepts/projects/config/
[project]
name = "pytorch-llmcompressor-notebook"
version = "0.1.0"
requires-python = "==3.12.*"

# https://docs.astral.sh/uv/concepts/projects/workspaces/#when-not-to-use-workspaces
dependencies = [
    "uv",
    "micropipenv[toml]",

    # PyTorch packages
    "tensorboard",
    "torch",
    "torchvision",

    # llmcompressor packages
    # see https://redhat-internal.slack.com/archives/C0961HQ858Q/p1757007056725559?thread_ts=1756924127.136609&cid=C0961HQ858Q
    "odh-notebooks-meta-llmcompressor-deps",
    "speculators",
    "lm-eval",

    # Datascience and useful extensions
    "skl2onnx",
    "onnxscript",
    "odh-notebooks-meta-workbench-datascience-deps",

    "odh-notebooks-meta-db-connectors-deps",
    "odh-notebooks-meta-jupyterlab-deps",
    # PDF export (nbconvert); RHAIENG-5765 / AIPCC-7795
    "pandoc-rhai",
    "odh-notebooks-meta-jupyterlab-datascience-deps",

    # Base packages
    "wheel",
    "setuptools",
]

## https://docs.astral.sh/uv/concepts/resolution/#dependency-metadata
#[[tool.uv.dependency-metadata]]
## TODO(HACK): vllm is a requirement, however, as compressed-tensors is pinned, this can't be installed together
#name = "vllm"
#version = "0.8.5"
#requires-dist = [
#    "compressed-tensors"
#]

# https://docs.astral.sh/uv/concepts/projects/dependencies/#dependency-sources
[tool.uv.sources]
# https://github.com/astral-sh/uv/issues/13067#issuecomment-2824190008
odh-notebooks-meta-llmcompressor-deps = { path = "../../../dependencies/odh-notebooks-meta-llmcompressor-deps" }
odh-notebooks-meta-workbench-datascience-deps = { path = "../../../dependencies/odh-notebooks-meta-workbench-datascience-deps" }
odh-notebooks-meta-db-connectors-deps = { path = "../../../dependencies/odh-notebooks-meta-db-connectors-deps" }
odh-notebooks-meta-jupyterlab-deps = { path = "../../../dependencies/odh-notebooks-meta-jupyterlab-deps" }
odh-notebooks-meta-jupyterlab-datascience-deps = { path = "../../../dependencies/odh-notebooks-meta-jupyterlab-datascience-deps" }

# https://docs.astral.sh/uv/concepts/resolution/#dependency-overrides
# https://docs.astral.sh/uv/reference/settings/#override-dependencies
[tool.uv]

environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython' and python_full_version == '3.12.*'",
]

# May at some point these or some of these dependencies need to be remove as they will autoheal
override-dependencies = [
    # odh-elyra pins jupyter-resource-usage<1.2.dev0, but 1.1.1 needs psutil<6 while
    # ipython 9.14+ on the RH index needs psutil>=7. Index ships 1.2.1.
    "jupyter-resource-usage>=1.2.1,<1.3",
    # RHAIENG-2458: urllib3>=2.7.0 — CVE-2026-44431, CVE-2026-44432 (2.7.0); CVE-2025-66418 (2.6.0)
    # Override needed because odh-elyra pulls in appengine-python-standard with urllib3<2
    "urllib3>=2.7.0",
    # AIPCC-13675: protobuf 6.33.6+ UPB C extension segfaults on s390x
    "protobuf==6.31.1",
    # RHAIENG-5267: requests==2.32 dep conflict with chardet 
    "requests>=2.33.1",
]
