# https://docs.astral.sh/uv/concepts/projects/config/
[project]
name = "pytorch-llmcompressor-notebook"
version = "0.1.0"
requires-python = "==3.12.*"

# https://docs.astral.sh/uv/concepts/projects/workspaces/#when-not-to-use-workspaces
dependencies = [
    # see https://redhat-internal.slack.com/archives/C079FE5H94J/p1756933987117709?thread_ts=1756933154.294109&cid=C079FE5H94J
    # for a discussion on what version of torch to use

    # PyTorch packages
    "tensorboard~=2.20.0",
    "torch==2.7.1",
    "torchvision~=0.22.1",

    # llmcompressor stack (RHAIIS 3.2.2 model-opt/cuda-ubi9 — source of truth for RHOAI 2.25):
    # https://gitlab.com/redhat/rhel-ai/rhaiis/pipeline/-/blob/3.2.2/collections/model-opt/cuda-ubi9/requirements.txt
    # https://gitlab.com/redhat/rhel-ai/rhaiis/pipeline/-/blob/3.2.2/collections/model-opt/cuda-ubi9/constraints.txt
    # See jupyter/pytorch+llmcompressor/README.md for alignment notes and RHAIENG-6035.
    "llmcompressor==0.7.1.3",
    "lm-eval~=0.4.9",

    # Datascience and useful extensions
    "boto3~=1.40.27",
    "kafka-python-ng~=2.2.3",
    "kfp~=2.14.3",
    "matplotlib~=3.10.6",
    "numpy~=2.2.6",
    "pandas~=2.3.2",
    "plotly~=6.3.0",
    "scikit-learn~=1.7.2",
    "scipy~=1.16.1",
    "skl2onnx~=1.19.1",
    "onnxconverter-common~=1.16.0",  # ONNX 1.21+ (skl2onnx); was ~=1.13.0
    "onnx>=1.21.0; platform_machine != 's390x'",  # CVE-2026-28500
    "kubeflow-training==1.9.3",
    "feast~=0.54.1",

    # DB connectors
    "pymongo~=4.14.1",
    "psycopg~=3.2.10",
    "pyodbc~=5.2.0",
    "mysql-connector-python~=9.4.0",

    # JupyterLab packages
    "odh-elyra==4.2.4",
    "odh-jupyter-trash-cleanup==0.1.1",

    "jupyterlab==4.4.7",
    "jupyter-bokeh~=4.0.5",
    "jupyter-server~=2.17.0",
    "jupyter-server-proxy~=4.4.0",
    "jupyter-server-terminals~=0.5.3",
    "jupyterlab-git~=0.51.2",
    "jupyterlab-lsp~=5.1.0",
    "jupyterlab-widgets~=3.0.15",
    "jupyter-resource-usage~=1.1.1",
    "nbdime~=4.0.2",
    "nbgitpuller~=1.2.2",

    # Base packages
    "wheel~=0.46.2",
    "setuptools~=80.9.0",
]

# https://docs.astral.sh/uv/concepts/projects/dependencies/#dependency-sources
[tool.uv.sources]
# https://docs.astral.sh/uv/guides/integration/pytorch/#using-uv-with-pytorch
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

# https://docs.astral.sh/uv/concepts/indexes/#package-indexes
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# https://docs.astral.sh/uv/concepts/resolution/#dependency-overrides
# https://docs.astral.sh/uv/reference/settings/#override-dependencies
[tool.uv]
# RHAIIS model-opt uses constraints.txt only (fromager has no uv-style overrides).
# RHAIIS pins are mirrored in constraint-dependencies; overrides below are
# notebooks-only where constraints cannot replace a transitive upper bound.
override-dependencies = [
    # RHAIENG-2458: elyra pins urllib3 below RHAIIS/CVE floor; constraints alone do not replace transitive caps
    "urllib3>=2.7.0",
    # RHOAIENG-53183: notebooks-only CVE (not in RHAIIS model-opt constraints.txt)
    "black>=26.3.1",
    # feast~=0.54.1 caps pyarrow<=17; RHAIIS constraints.txt requires pyarrow>=23 (CVE floor)
    "pyarrow>=23.0.1,<24.0.0",
]

# RHAIIS 3.2.2 collections/model-opt/cuda-ubi9/constraints.txt (+ llmcompressor in requirements.txt)
# https://gitlab.com/redhat/rhel-ai/rhaiis/pipeline/-/tree/3.2.2/collections/model-opt/cuda-ubi9
constraint-dependencies = [
    "loguru==0.7.3",
    "pyyaml==6.0.2",
    "numpy==2.2.6",
    "requests==2.34.2",
    "tqdm==4.67.1",
    # apicc is still on torch 2.7.1
    # "torch==2.8.0",
    "transformers==4.55.2",
    "datasets==4.0.0",
    "accelerate==1.10.0",
    "pynvml==12.0.0",
    "pillow==12.2.0",
    "urllib3>=2.7.0",
    "aiohttp>=3.14.0",
    "filelock>=3.20.3",
    "python-dotenv>=1.2.2",
    "pyarrow>=23.0.1,<24.0.0",
]

environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython'",
]
