[project]
name = "pytorch-notebook"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    # PyTorch packages
    "tensorboard~=2.20.0",
    "torch==2.7.1+cu128",
    "torchvision==0.22.1+cu128",

    # Datascience and useful extensions
    "boto3~=1.42.29",
    "kafka-python-ng~=2.2.3",
    "kfp~=2.15.2",
    "matplotlib~=3.10.7",
    "numpy~=2.3.5",
    "pandas~=2.3.3",
    "plotly~=6.5.2",
    "scikit-learn~=1.8.0",
    "scipy~=1.16.2",
    "skl2onnx~=1.19.1",
    "onnxconverter-common~=1.16.0",
    # TODO(RHAIENG-3039): Re-enable codeflare-sdk before RHOAI 3.4 GA
    "codeflare-sdk~=0.34.0",
    "kubeflow-training==1.9.3",
    # TODO(RHAIENG-3041): Upgrade feast to ~=0.59.0 before RHOAI 3.4 GA
    "feast~=0.58.0",

    # DB connectors
    "pymongo~=4.15.3",
    "psycopg~=3.3.2",
    "pyodbc~=5.3.0",
    "mysql-connector-python~=9.5.0",

    # JupyterLab packages
    "odh-elyra==4.3.2",
    "odh-jupyter-trash-cleanup==0.1.1",

    "jupyterlab==4.5.2",
    "jupyter-bokeh~=4.0.5",
    "jupyter-server~=2.17.0",
    "jupyter-server-proxy~=4.4.0",
    "jupyter-server-terminals~=0.5.3",
    "jupyterlab-git~=0.51.2",
    "jupyterlab-lsp~=5.1.1",
    "jupyterlab-widgets~=3.0.15",
    "jupyter-resource-usage~=1.1.1",
    "nbdime~=4.0.2",
    "nbgitpuller~=1.2.2",

    # Base packages
    "wheel~=0.45.1",
    "setuptools~=80.9.0",
]

[tool.uv.sources]
torch = {index = "pytorch-cuda"}
torchvision = {index = "pytorch-cuda"}

# https://docs.astral.sh/uv/concepts/indexes/#package-indexes
[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv]
environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython'",
]
override-dependencies = [
    # RHAIENG-2458: CVE-2025-66418 urllib3 decompression vulnerability
    # Upstream: https://github.com/elyra-ai/elyra/issues/3325
    "urllib3>=2.6.0",
    # AIPCC-8698: python-lsp-server[all] has conflicting pyflakes/pycodestyle requirements
    # Using >= instead of ~= to allow broader compatibility during resolution
    # TODO: Remove this override before RHOAI 3.4 GA once AIPCC-8698 is resolved
    "python-lsp-server>=1.11.0",
]
