[project]
name = "pytorch-notebook"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    # PyTorch packages (from AIPCC CUDA index)
    "tensorboard~=2.20.0",
    "torch==2.9.0",
    "torchvision==0.24.0",

    # Subproject dependencies
    "notebooks-base-deps",
    "notebooks-jupyterlab-deps",
    "notebooks-jupyterlab-datascience-deps",
    "notebooks-datascience-deps",
    "notebooks-db-connectors-deps",
]

[tool.uv.sources]
torch = {index = "pytorch-cuda"}
torchvision = {index = "pytorch-cuda"}
notebooks-base-deps = { path = "../../../dependencies/base" }
notebooks-jupyterlab-deps = { path = "../../../dependencies/jupyterlab" }
notebooks-jupyterlab-datascience-deps = { path = "../../../dependencies/jupyterlab-datascience" }
notebooks-datascience-deps = { path = "../../../dependencies/datascience" }
notebooks-db-connectors-deps = { path = "../../../dependencies/db-connectors" }

# https://docs.astral.sh/uv/concepts/indexes/#package-indexes
[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv]
environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython'",
]
override-dependencies = [
    # RHAIENG-2458: CVE-2025-66418 urllib3 - override needed because odh-elyra pulls in
    # appengine-python-standard which has an obnoxious urllib3<2 constraint
    "urllib3>=2.6.0",
    # AIPCC-8698: python-lsp-server[all] has conflicting pyflakes/pycodestyle requirements
    # The [all] extra pulls in linting tools we don't need at runtime
    # Using >= instead of ~= to allow broader compatibility during resolution
    # TODO: Remove this override before RHOAI 3.4 GA once AIPCC-8698 is resolved
    "python-lsp-server>=1.11.0",
]
