[project]
name = "pytorch-notebook"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    # PyTorch packages (from AIPCC CUDA index)
    "tensorboard",
    "torch",
    "torchvision",

    # Datascience and useful extensions
    "codeflare-sdk",
    "feast",
    "skl2onnx",
    "onnxscript",
    "odh-notebooks-meta-workbench-datascience-deps",
    "odh-notebooks-meta-db-connectors-deps",
    "odh-notebooks-meta-jupyterlab-deps",
    "odh-notebooks-meta-jupyterlab-datascience-deps",

    # Base packages
    "wheel",
    "setuptools",
]

[tool.uv]
environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython'",
]

override-dependencies = [
    # RHAIENG-2458: CVE-2025-66418 urllib3 - override needed because odh-elyra pulls in
    # appengine-python-standard which has an obnoxious urllib3<2 constraint
    "urllib3>=2.6.0",
    # AIPCC-13675: protobuf 6.33.6+ UPB C extension segfaults on s390x
    "protobuf==6.31.1",
]

[tool.uv.sources]
odh-notebooks-meta-workbench-datascience-deps = { path = "../../../dependencies/odh-notebooks-meta-workbench-datascience-deps" }
odh-notebooks-meta-db-connectors-deps = { path = "../../../dependencies/odh-notebooks-meta-db-connectors-deps" }
odh-notebooks-meta-jupyterlab-deps = { path = "../../../dependencies/odh-notebooks-meta-jupyterlab-deps" }
odh-notebooks-meta-jupyterlab-datascience-deps = { path = "../../../dependencies/odh-notebooks-meta-jupyterlab-datascience-deps" }
