[project]
name = "tensorflow-notebook"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    "uv",
    "micropipenv[toml]",

    # TensorFlow packages
    "tensorflow",
    "tensorboard",

    # Datascience and useful extensions
    "skl2onnx",
    "odh-notebooks-meta-workbench-datascience-deps",

    "odh-notebooks-meta-db-connectors-deps",
    "odh-notebooks-meta-jupyterlab-deps",
    "odh-notebooks-meta-jupyterlab-datascience-deps",

    # Base packages
    "wheel",
    "setuptools",
]

[tool.uv.sources]
odh-notebooks-meta-workbench-datascience-deps = { path = "../../../dependencies/odh-notebooks-meta-workbench-datascience-deps" }
odh-notebooks-meta-db-connectors-deps = { path = "../../../dependencies/odh-notebooks-meta-db-connectors-deps" }
odh-notebooks-meta-jupyterlab-deps = { path = "../../../dependencies/odh-notebooks-meta-jupyterlab-deps" }
odh-notebooks-meta-jupyterlab-datascience-deps = { path = "../../../dependencies/odh-notebooks-meta-jupyterlab-datascience-deps" }

[tool.uv]

override-dependencies = [
    # odh-elyra pins jupyter-resource-usage<1.2.dev0, but 1.1.1 needs psutil<6 while
    # ipython 9.14+ on the RH index needs psutil>=7. Index ships 1.2.1.
    "jupyter-resource-usage>=1.2.1,<1.3",
    # RHAIENG-2458: urllib3>=2.7.0 — CVE-2026-44431, CVE-2026-44432 (2.7.0); CVE-2025-66418 (2.6.0)
    # Override needed because odh-elyra pulls in appengine-python-standard with urllib3<2
    "urllib3>=2.7.0",
    # AIPCC-13675: https://redhat.atlassian.net/browse/AIPCC-13675
    # https://github.com/tensorflow/tensorflow/blob/r2.21/requirements_lock_3_12.txt#L552
    "protobuf==6.31.1",
]

environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython' and python_full_version == '3.12.*'",
]
