[project]
name = "tensorflow-notebook"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    "uv",
    "micropipenv[toml]",

    # TensorFlow packages
    "tensorflow",
    "tensorboard",

    # Datascience and useful extensions
    "codeflare-sdk",
    "feast",
    "skl2onnx",
    "odh-notebooks-meta-workbench-datascience-deps",

    "odh-notebooks-meta-db-connectors-deps",
    "odh-notebooks-meta-jupyterlab-deps",
    "odh-notebooks-meta-jupyterlab-datascience-deps",

    # Base packages
    "wheel",
    "setuptools",
]

[tool.uv.sources]
odh-notebooks-meta-workbench-datascience-deps = { path = "../../../dependencies/odh-notebooks-meta-workbench-datascience-deps" }
odh-notebooks-meta-db-connectors-deps = { path = "../../../dependencies/odh-notebooks-meta-db-connectors-deps" }
odh-notebooks-meta-jupyterlab-deps = { path = "../../../dependencies/odh-notebooks-meta-jupyterlab-deps" }
odh-notebooks-meta-jupyterlab-datascience-deps = { path = "../../../dependencies/odh-notebooks-meta-jupyterlab-datascience-deps" }

[tool.uv]

override-dependencies = [
    # RHAIENG-2458: CVE-2025-66418 urllib3 - override needed because odh-elyra pulls in
    # appengine-python-standard which has an obnoxious urllib3<2 constraint
    "urllib3>=2.6.0",
    # AIPCC-13675: https://redhat.atlassian.net/browse/AIPCC-13675
    # https://github.com/tensorflow/tensorflow/blob/r2.21/requirements_lock_3_12.txt#L552
    "protobuf==6.31.1",
]

environments = [
    "sys_platform == 'linux' and implementation_name == 'cpython'",
]
