[project]
name = "tensorflow-notebook"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    "tf2onnx~=1.16.1",

    # TensorFlow packages
    "tensorflow[and-cuda]~=2.20.0",
    "tensorboard~=2.20.0",

    # Datascience and useful extensions
    "boto3~=1.40.27",
    "kafka-python-ng~=2.2.3",
    "kfp~=2.14.3",
    "matplotlib~=3.10.6",
    "numpy~=2.1.3",
    "pandas~=2.3.2",
    "plotly~=6.3.0",
    "scikit-learn~=1.7.2",
    "scipy~=1.16.1",
    "skl2onnx~=1.19.1",
    "onnxconverter-common~=1.16.0",  # ONNX 1.21+ (skl2onnx); was ~=1.13.0
    "onnx>=1.21.0; platform_machine != 's390x'",  # CVE-2026-28500
    "codeflare-sdk~=0.31.2",
    "feast~=0.54.1",

    # DB connectors
    "pymongo~=4.14.1",
    "psycopg~=3.2.10",
    "pyodbc~=5.2.0",
    "mysql-connector-python~=9.4.0",

    # JupyterLab packages
    "odh-elyra==4.2.4",
    "odh-jupyter-trash-cleanup==0.1.1",

    "jupyterlab==4.4.7",
    "jupyter-bokeh~=4.0.5",
    "jupyter-server~=2.17.0",
    "jupyter-server-proxy~=4.4.0",
    "jupyter-server-terminals~=0.5.3",
    "jupyterlab-git~=0.51.2",
    "jupyterlab-lsp~=5.1.1",
    "jupyterlab-widgets~=3.0.15",
    "jupyter-resource-usage~=1.1.1",
    "nbdime~=4.0.2",
    "nbgitpuller~=1.2.2",

    # Base packages
    "wheel~=0.46.2",
    "setuptools~=80.9.0",
]

[tool.uv]

override-dependencies = [
    # RHAIENG-3211: CVE-2026-26007 cryptography Subgroup Attack
    "cryptography>=46.0.5",
    # tf2onnx has pinned protobuf version, that causes conflict with other packages
    "protobuf==6.31.1",
    "keras~=3.13.2",
    # RHAIENG-2458: CVE-2025-66418 urllib3 decompression vulnerability
    # Upstream: https://github.com/elyra-ai/elyra/issues/3325
    "urllib3>=2.6.0",
    # RHAIENG-3209: CVE-2026-25990  Pillow: Out-of-bounds Write
    # Upstream: https://github.com/vllm-project/llm-compressor/releases/tag/0.7.1.1
    "pillow>=12.1.1",
    # RHOAIENG-53183: CVE-2026-32274 Black: Arbitrary file writes from unsanitized user input in cache file name
    "black>=26.3.1",
]

environments = [
    "python_version == '3.12' and sys_platform == 'linux' and platform_machine == 'x86_64'",
    "python_version == '3.12' and sys_platform == 'linux' and platform_machine == 'aarch64'",
]
